[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/scenes/title_screen.gd" type="Script" id=1]

[node name="title screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -124.0
margin_right = -56.0
margin_bottom = -52.0

[node name="name_label" type="Label" parent="."]
margin_left = 184.0
margin_top = 112.0
margin_right = 226.0
margin_bottom = 128.0
rect_scale = Vector2( 3, 3 )
text = "Name:"

[node name="IP_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -124.0
margin_right = 440.0
margin_bottom = -52.0

[node name="iP_label" type="Label" parent="."]
margin_left = 648.0
margin_top = 112.0
margin_right = 721.0
margin_bottom = 128.0
rect_scale = Vector2( 3, 3 )
text = "Ip Address:"

[node name="host" type="Button" parent="."]
margin_left = 176.0
margin_top = 272.0
margin_right = 352.0
margin_bottom = 328.0
text = "host"

[node name="join" type="Button" parent="."]
margin_left = 680.0
margin_top = 272.0
margin_right = 856.0
margin_bottom = 328.0
text = "join"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="host" to="." method="_on_host_pressed"]
[connection signal="button_up" from="join" to="." method="_on_join_pressed"]
